--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -16,5 +16,5 @@ jobs:
           lfs: true
       - name: Push to hub
         env:
-          HF_TOKEN: ${{ secrets.CUSTOM_MODEL }}
+          HF_TOKEN: ${{ secrets.HF }}
         run: git push --force https://Sapnil:$HF_TOKEN@huggingface.co/spaces/Sapnil/Custom_Model_Deployment main
